src/test/ui/parser/lex-bad-char-literals-4.stderr
error: unterminated character literal
  --> $DIR/lex-bad-char-literals-4.rs:4:5
   |
LL |     'â—
   |     ^^^^

error: aborting due to previous error

